working code that gives decent results

--- a/Project1_Playground.ipynb
+++ b/Project1_Playground.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "0cf9845b",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 5,
    "id": "102bf98a",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
       "[nltk_data] Downloading package punkt to /Users/liam/nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
       "[nltk_data] Downloading package stopwords to /Users/liam/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
     {
@@ -130,7 +130,7 @@
        "'Oh and I forgot to also mention the weird color effect it has on your phone.'"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,67 +145,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
-   "id": "a1e8f14b",
+   "execution_count": 6,
+   "id": "bb2e51e1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#remove_words = ['the', 'and', 'i', 'is', 'to', 'of', 'this', 'was', 'it', 'in', 'for', 'that', 'with', 'my', 'on', 'you', 'are', 'as', 'be', 'at', 'an', 'were', 'we', \"it's\", 'there', 'they', 'from', 'has', 'about', 'your', 'or', 'by', 'when', 'he', 'what', 'which', 'some', 'been', 'who', 'our', 'how', 'after', 'here', 'their', 'me', 'did', 'other', 'its', 'new', 'being', 'am', 'them', 'does', 'her', 'these', 'into', 'then', 'while', 'she', 'these', 'where', 'during', 'why', 'itself', 'him', 'where', 'during', 'why', 'itself', 'him', 'whom', \"she's\"]\n",
     "\n",
     "from nltk.corpus import stopwords"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
-   "id": "e44d606f",
+   "execution_count": 7,
+   "id": "3de5d004",
    "metadata": {},
    "outputs": [],
    "source": [
     "stop_words = set(stopwords.words('english'))\n",
     "stop_words = {word.replace(\"'\", '') for word in stop_words}\n",
-    "toRemove = {'not', 'couldnt', 'shouldnt'}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 169,
-   "id": "8e84c60a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "toRemove = {'not', 'couldnt', 'shouldnt'}\n",
     "for entry in toRemove:\n",
     "    stop_words.discard(entry)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 170,
-   "id": "b1318c50",
+   "cell_type": "markdown",
+   "id": "c1b5f8a5",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#stop_words"
+    "# Preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": null,
+   "id": "bc6c19e0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c48e4641",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "9a780b6d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#the following code was also taken from the lab\n",
-    "tok_count_dict = dict()\n",
+    "#The following code is from the Bag of Words Lab\n",
     "\n",
-    "for line in tr_list_of_sentences:\n",
-    "    tok_list = tokenize_text(line)\n",
-    "    for tok in tok_list:\n",
-    "        if tok not in stop_words:\n",
+    "def create_tok_count(list_of_sentences):\n",
+    "    tok_count_dict = dict()\n",
+    "\n",
+    "    for line in list_of_sentences:\n",
+    "        tok_list = tokenize_text(line)\n",
+    "        for tok in tok_list:\n",
     "            if tok in tok_count_dict:\n",
     "                tok_count_dict[tok] += 1\n",
     "            else:\n",
-    "                tok_count_dict[tok] = 1"
+    "                tok_count_dict[tok] = 1\n",
+    "                    \n",
+    "    return tok_count_dict"
    ]
   },
   {
@@ -226,10 +233,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 9,
    "id": "3d6fc66f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tok_count_dict' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m sorted_tokens \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28msorted\u001b[39m(\u001b[43mtok_count_dict\u001b[49m, key\u001b[38;5;241m=\u001b[39mtok_count_dict\u001b[38;5;241m.\u001b[39mget, reverse\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tok_count_dict' is not defined"
+     ]
+    }
+   ],
    "source": [
     "sorted_tokens = list(sorted(tok_count_dict, key=tok_count_dict.get, reverse=True))\n",
     "# for w in sorted_tokens[:10]:\n",
@@ -238,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": null,
    "id": "f0248bdd",
    "metadata": {},
    "outputs": [],
@@ -248,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": null,
    "id": "aa8e8ab5",
    "metadata": {},
    "outputs": [],
@@ -259,28 +278,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 10,
    "id": "a98df791",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['not',\n",
-       " 'good',\n",
-       " 'great',\n",
-       " 'movie',\n",
-       " 'phone',\n",
-       " 'film',\n",
-       " 'one',\n",
-       " 'place',\n",
-       " 'food',\n",
-       " 'like']"
-      ]
-     },
-     "execution_count": 205,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'sorted_tokens' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#filtering out the 10 most common tokens (since they don't do much to influence the positivity or negativity of a review)\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43msorted_tokens\u001b[49m[:\u001b[38;5;241m10\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sorted_tokens' is not defined"
+     ]
     }
    ],
    "source": [
@@ -290,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 11,
    "id": "33a81c76",
    "metadata": {},
    "outputs": [],
@@ -301,10 +312,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 12,
    "id": "ed8e124b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sorted_tokens' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#need to decide whether or not we want to filter out the tokens that aren't used very much\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m vocab_list \u001b[38;5;241m=\u001b[39m [w \u001b[38;5;28;01mfor\u001b[39;00m w \u001b[38;5;129;01min\u001b[39;00m \u001b[43msorted_tokens\u001b[49m[:] \u001b[38;5;28;01mif\u001b[39;00m tok_count_dict[w] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m FREQ_THRESHOLD]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sorted_tokens' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#need to decide whether or not we want to filter out the tokens that aren't used very much\n",
     "vocab_list = [w for w in sorted_tokens[:] if tok_count_dict[w] >= FREQ_THRESHOLD]"
@@ -312,10 +335,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 13,
    "id": "15ae9467",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'vocab_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m vocab_dict \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m()\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m vocab_id, tok \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[43mvocab_list\u001b[49m):\n\u001b[1;32m      3\u001b[0m     vocab_dict[tok] \u001b[38;5;241m=\u001b[39m vocab_id\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'vocab_list' is not defined"
+     ]
+    }
+   ],
    "source": [
     "vocab_dict = dict()\n",
     "for vocab_id, tok in enumerate(vocab_list):\n",
@@ -324,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 14,
    "id": "fd637a93",
    "metadata": {},
    "outputs": [],
@@ -334,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 15,
    "id": "2173741a",
    "metadata": {},
    "outputs": [],
@@ -367,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 16,
    "id": "ee3dc3d4",
    "metadata": {},
    "outputs": [],
@@ -557,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "id": "91aeb141",
+   "id": "41cfe93f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "id": "f0c4f722",
+   "id": "521efd29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "d138b9a9",
+   "id": "586d6200",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,11 +698,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a2c9f4a5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x_tr_NV' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mx_tr_NV\u001b[49m\u001b[38;5;241m.\u001b[39mshape\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'x_tr_NV' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "x_tr_NV.shape"
+   ]
   },
   {
    "cell_type": "code",
@@ -1304,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 257,
    "id": "485112c5",
    "metadata": {},
    "outputs": [],
@@ -1312,31 +1361,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 258,
    "id": "29e38921",
    "metadata": {},
    "outputs": [],
    "source": [
     "#getting a leaderboard score:\n",
     "x_test_df = pd.read_csv('data_reviews/x_test.csv')\n",
-    "test_list_of_sentences = x_test_df['text'].values.tolist()\n"
+    "test_list_of_sentences = x_test_df['text'].values.tolist()\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 286,
+   "id": "c3ce18b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>website_name</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>amazon</td>\n",
+       "      <td>It only recognizes the Phone as its storage de...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>amazon</td>\n",
+       "      <td>Disappointing accessory from a good manufacturer.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>amazon</td>\n",
+       "      <td>The one big drawback of the MP3 player is that...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>amazon</td>\n",
+       "      <td>This particular model would not work with my M...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>amazon</td>\n",
+       "      <td>If the two were seperated by a mere 5+ ft I st...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>595</th>\n",
+       "      <td>yelp</td>\n",
+       "      <td>Everything was fresh and delicious!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>596</th>\n",
+       "      <td>yelp</td>\n",
+       "      <td>- Really, really good rice, all the time.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>597</th>\n",
+       "      <td>yelp</td>\n",
+       "      <td>Pretty awesome place.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>598</th>\n",
+       "      <td>yelp</td>\n",
+       "      <td>The staff are great, the ambiance is great.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>599</th>\n",
+       "      <td>yelp</td>\n",
+       "      <td>The patio seating was very comfortable.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>600 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    website_name                                               text\n",
+       "0         amazon  It only recognizes the Phone as its storage de...\n",
+       "1         amazon  Disappointing accessory from a good manufacturer.\n",
+       "2         amazon  The one big drawback of the MP3 player is that...\n",
+       "3         amazon  This particular model would not work with my M...\n",
+       "4         amazon  If the two were seperated by a mere 5+ ft I st...\n",
+       "..           ...                                                ...\n",
+       "595         yelp                Everything was fresh and delicious!\n",
+       "596         yelp          - Really, really good rice, all the time.\n",
+       "597         yelp                              Pretty awesome place.\n",
+       "598         yelp        The staff are great, the ambiance is great.\n",
+       "599         yelp            The patio seating was very comfortable.\n",
+       "\n",
+       "[600 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 286,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "id": "11030fb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 274,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(test_list_of_sentences)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "id": "84ee772a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for sentence in test_list_of_sentences:\n",
+    "    \n",
+    "    new_list.append(tokenize_text(sentence))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "id": "ad684f3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# x_test_RawString = x_test_df['text'].str.cat(sep='\\n')\n",
+    "# x_test_RawString"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5078c1a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "402a6665",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92b6c362",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca8ddcdd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 280,
    "id": "fab3f03c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Z = len(test_list_of_sentences)\n",
+    "Z = len(new_list)\n",
     "y_tr_Z = np.hstack([np.zeros(Z//2), np.ones(Z//2)])\n",
     "x_tr_ZV = np.zeros((Z, V))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 282,
    "id": "43063379",
    "metadata": {},
    "outputs": [],
@@ -1347,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 283,
    "id": "bafd1117",
    "metadata": {},
    "outputs": [],
@@ -1357,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 284,
    "id": "859d702c",
    "metadata": {},
    "outputs": [
@@ -1367,7 +1612,7 @@
        "(600,)"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 284,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1378,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 285,
    "id": "34306223",
    "metadata": {},
    "outputs": [],
