starting point tuesday

--- a/Project1_Playground.ipynb
+++ b/Project1_Playground.ipynb
@@ -1651,8 +1651,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d5afc8fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#testing afinn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ce2e84ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from afinn import Afinn\n",
+    "\n",
+    "def determine_sentiment(word):\n",
+    "    afinn = Afinn()\n",
+    "    score = afinn.score(word)\n",
+    "    \n",
+    "    if score > 0:\n",
+    "        return 1  # Positive sentiment\n",
+    "    elif score < 0:\n",
+    "        return -1  # Negative sentiment\n",
+    "    else:\n",
+    "        return 0  # Neutral/Indeterminate sentiment\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0af483c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = \"mother\"\n",
+    "result = determine_sentiment(word)\n",
+    "print(result)  # 1 for positive sentiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01b5fdec",
    "metadata": {},
    "outputs": [],
    "source": []
