--- a/Project1_Modular_Playground.ipynb
+++ b/Project1_Modular_Playground.ipynb
@@ -823,25 +823,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 739,
+   "execution_count": 4,
    "id": "fe8e178e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'loguniform' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m cRange \u001b[38;5;241m=\u001b[39m \u001b[43mloguniform\u001b[49m(\u001b[38;5;241m1e-3\u001b[39m, \u001b[38;5;241m1e3\u001b[39m)\n\u001b[1;32m      2\u001b[0m tol \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1e-1\u001b[39m,\u001b[38;5;241m1e-2\u001b[39m,\u001b[38;5;241m1e-3\u001b[39m,\u001b[38;5;241m1e-4\u001b[39m,\u001b[38;5;241m1e-5\u001b[39m]\n\u001b[1;32m      3\u001b[0m C_grid \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlogspace(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m6\u001b[39m, \u001b[38;5;241m6\u001b[39m, \u001b[38;5;241m10\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'loguniform' is not defined"
+     ]
+    }
+   ],
    "source": [
     "cRange = loguniform(1e-3, 1e3)\n",
-    "tol = [0, 1e-1,1e-2,1e-3,1e-4,1e-5]"
+    "tol = [0, 1e-1,1e-2,1e-3,1e-4,1e-5]\n",
+    "C_grid = np.logspace(-6, 6, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 776,
+   "execution_count": 3,
    "id": "135dd9c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'C_grid' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#solver 'lbfgs' does not support an l1 penalty\u001b[39;00m\n\u001b[1;32m      2\u001b[0m distributions \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m----> 3\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[43mC_grid\u001b[49m,\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpenalty\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ml2\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;66;03m#'tol': tol,\u001b[39;00m\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;66;03m#'fit_intercept': [True, False]\u001b[39;00m\n\u001b[1;32m      7\u001b[0m }\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'C_grid' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#solver 'lbfgs' does not support an l1 penalty\n",
     "distributions = {\n",
-    "    'C': cRange,\n",
+    "    'C': C_grid,\n",
     "    'penalty': ['l2']\n",
     "    #'tol': tol,\n",
     "    #'fit_intercept': [True, False]\n",
@@ -903,7 +928,7 @@
     }
    ],
    "source": [
-    "C_grid = np.logspace(-6, 6, 10)\n",
+    "\n",
     "C_grid"
    ]
   },
